# kiran-control-panel

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists4.txt  README  README.en.md  README.md  SystemDaemonTimeDate.cpp  SystemDaemonTimeDate.h  config.h.in  date-spinbox.h  disable-deselect-listwidget.cpp  general-functions-class.h  hardware-information-widget.cpp  hardware-information-widget.h  hardware-information-widget.ui  image.qrc  images.qrc  information-list-item.cpp  information-list-item.h  information-list-item.ui  install-location-define.cmake  interface.cpp  interface.h  kcp_variables.cmake  kiran-clock.cpp  kiran-clock.h  kiran-combobox.cpp  kiran-combobox.h  kiran-control-panel-global.cpp  kiran-control-panel-global.h  kiran-control-panel-window.cpp  kiran-control-panel-window.h  kiran-control-panel.cpp  kiran-control-panel.h  kiran-control-panel.pro  kiran-control-panel.ui  kiran-control-panel_global.pri  kiran-cpanel-system.spec  kiran-date-picker-widget.cpp  (+90 more)
avatar-editor/: CMakeLists.txt
avatar-editor/include/: exit-code-defines.h  ui-defines.h
avatar-editor/src/: image-preview-widget.cpp  image-preview-widget.h  kiran-avatar-editor.cpp  kiran-avatar-editor.h  main.cpp
avatar-editor/tools/: log.cpp  log.h
avatar-editor/translations/: kiran-avatar-editor.zh_CN.ts
config/: CMakeLists.txt  config.h.in  kiran-account-manager.conf  kiran-account-manager.desktop  kiran-account-manager.desktop.in  kiran-cpanel-account.desktop.in  kiran-cpanel-appearance.desktop.in  kiran-cpanel-datetime.desktop.in  kiran-cpanel-keybinding.desktop.in  kiran-cpanel-keyboard.desktop.in  kiran-cpanel-mouse.desktop.in  kiran-cpanel-system.desktop.in  kiran-cpanel-timedate.desktop.in  kiran-system-information.desktop  kiran-system-information.desktop.in  kiran-timedate-manager-plugin.desktop.in  kiran-timedate-manager.desktop
data/: 00-server.conf  CMakeLists.txt  com.kylinsec.Kiran.SystemDaemon.Biometrics.xml  config.h.in  data.qrc  kiran-control-center.pc.in  kiran-control-panel.desktop.in  kiran-control-panel.pc.in  kiran-cpanel-display.desktop.in  license-style.qss  loading-data.qrc  res.qrc  style.qss
desktop/: CMakeLists.txt
desktop/files/: kiran-display-tools.desktop
example/kiran-cpanel-demo/: CMakeLists.txt
kiran-control-center/: CMakeLists.txt  Makefile  cmake_install.cmake  image.qrc  kiran-control-center-window.cpp  kiran-control-center.en_US.qm  kiran-control-center.en_US.ts  kiran-control-center.h  kiran-control-center.pc.in  kiran-control-center.pro  kiran-control-center.ui  kiran-control-center.zh_CN.qm  kiran-control-center.zh_CN.ts  kiran-control-panel-window.cpp  kiran-control-panel-window.h  kiran-control-panel.cpp  kiran-control-panel.h  kiran-control-panel.pc.in  kiran-module-class-listwidget.cpp  kiran-module-class-listwidget.h  main.cpp
kiran-control-center/kiran-control-center-module-runalone/: kiran-control-panel-module-runalone-window.h
kiran-control-panel-module-runalone/: CMakeLists.txt  kiran-control-panel-module-runalone-window.cpp  kiran-control-panel-module-runalone-window.h  kiran-control-panel-module-runalone.pro  main.cpp
launcher/: CMakeLists.txt
launcher/src/: launcher.cpp  launcher.h  main.cpp
launcher/translations/: kiran-cpanel-launcher.bo_CN.ts  kiran-cpanel-launcher.kk_KG.ts  kiran-cpanel-launcher.kk_KZ.ts  kiran-cpanel-launcher.mn_MN.ts  kiran-cpanel-launcher.ug_CN.ts  kiran-cpanel-launcher.zh_CN.ts
lib/common-widgets/: CMakeLists.txt
lib/dbus-wrapper/: CMakeLists.txt  com.kylinsec.Kiran.SessionDaemon.Appearance.xml  com.kylinsec.Kiran.SystemDaemon.Accounts.User.xml  kiran-account-service-wrapper.h  kiran-appearance-service-wrapper.h
lib/plugin-info/: CMakeLists.txt  category-info.cpp  category-info.h  plugin-info.cpp  plugin-info.h
libexec/avatar-editor/: CMakeLists.txt  image-preview-widget.cpp  image-preview-widget.h  kiran-avatar-editor.cpp  main.cpp  ui-defines.h
libexec/wm-theme-thumbnailer/: CMakeLists.txt  marco-main.c
plugin-group/desktop/: CMakeLists.txt
plugin-group/src/: CMakeLists.txt  kiran-control-center-window.cpp  kiran-control-center-window.h  kiran-control-center.cpp  kiran-module-class-listwidget-itemwidget.cpp  kiran-module-class-listwidget.cpp  kiran-module-class-widget.cpp  main.cpp
plugin-single/desktop/: CMakeLists.txt
plugin-single/src/: CMakeLists.txt  kiran-control-center-single-plugin.cpp  kiran-control-center-single-plugin.h  kiran-control-panel-module-runalone.pro  main.cpp
plugin/account/: CMakeLists.txt  README.md
plugin/display/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/account/: CMakeLists.txt  account-plugin.cpp  account-plugin.h  account-subitem.cpp  account-subitem.h  account-widget.cpp  account-widget.h  accounts-global-info.cpp  accounts-global-info.h
plugins/appearance/: CMakeLists.txt  appearance-config.h.in  appearance-global-info.cpp  appearance-global-info.h  appearance-plugin.cpp  appearance-plugin.h  (+1 more)
resources/: CMakeLists.txt  account-manager-resources.qrc  control-panel-resources.qrc  kcp-datetime-resources.qrc  kcp-network-resources.qrc  res.qrc  resources.qrc
src/: CMakeLists.txt  animation-loading-label.cpp  animation-loading-label.h  category-item.cpp  category-item.h  category-listwidget-item.cpp  category-listwidget-item.h  category-listwidget.cpp  category-listwidget.h  category-side-bar.cpp  category-side-bar.h  category-widget.cpp  category-widget.h  category-widget.ui  change-host-name-widget.cpp  change-host-name-widget.h  change-host-name-widget.ui  comm-setting-widget.cpp  comm-setting-widget.h  comm-setting-widget.ui  connection-edit-page.cpp  connection-edit-page.h  connection-edit-page.ui  connection-itemwidget.cpp  connection-itemwidget.h  connection-lists.cpp  connection-lists.h  connection-show-page.cpp  connection-show-page.h  connection-show-page.ui  connection-state-notify.cpp  connection-state-notify.h  cpanel-network-widget.cpp  cpanel-network-widget.h  cpanel-network-widget.ui  cpanel-power-widget.cpp  cpanel-power-widget.h  cpanel-power-widget.ui  custom-itemwidget.cpp  custom-itemwidget.h  (+127 more)
(+1971 files in other folders)
