cmake_minimum_required(VERSION 3.2)

add_subdirectory(system)
add_subdirectory(power)
add_subdirectory(mouse)
add_subdirectory(audio)
#add_subdirectory(greeter)
add_subdirectory(account)
add_subdirectory(keyboard)
add_subdirectory(timedate)
add_subdirectory(network)
add_subdirectory(display)
add_subdirectory(keybinding)
add_subdirectory(appearance)