add_subdirectory(account)
add_subdirectory(appearance)
add_subdirectory(system)
add_subdirectory(power)
add_subdirectory(mouse)
add_subdirectory(keyboard)
add_subdirectory(timedate)
add_subdirectory(display)
add_subdirectory(keybinding)
add_subdirectory(authentication)
if (ENABLE_APPLICATION)
    add_subdirectory(application)
endif()
if(ENABLE_NETWORK)
    add_subdirectory(network)
endif()

if(ENABLE_AUDIO)
    add_subdirectory(audio)
endif()

if(ENABLE_USER_GROUP)
    add_subdirectory(group)
endif()

#add_subdirectory(test)