install(FILES "images/appearance.png"
	DESTINATION ${DATA_DIR}/${PROJECT_NAME}/icons/ )

install(FILES "images/wallpaper.svg"
	DESTINATION ${DATA_DIR}/${PROJECT_NAME}/icons/ )

install(FILES "images/themes.svg"
	DESTINATION ${DATA_DIR}/${PROJECT_NAME}/icons/ )

install(FILES "images/font.svg"
	DESTINATION ${DATA_DIR}/${PROJECT_NAME}/icons/ )

